@@ -4,16 +4,17 @@ import me.matiego.counting.ChannelData;
 import me.matiego.counting.Main;
 import me.matiego.counting.Translation;
 import me.matiego.counting.utils.CommandHandler;
+import me.matiego.counting.utils.DiscordUtils;
 import me.matiego.counting.utils.Logs;
 import me.matiego.counting.utils.Utils;
 import net.dv8tion.jda.api.EmbedBuilder;
-import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.entities.Webhook;
 import net.dv8tion.jda.api.entities.channel.ChannelType;
-import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
+import net.dv8tion.jda.api.entities.channel.attribute.IWebhookContainer;
 import net.dv8tion.jda.api.entities.channel.middleman.GuildChannel;
+import net.dv8tion.jda.api.entities.channel.middleman.GuildMessageChannel;
 import net.dv8tion.jda.api.entities.channel.unions.MessageChannelUnion;
 import net.dv8tion.jda.api.interactions.InteractionHook;
 import net.dv8tion.jda.api.interactions.commands.SlashCommandInteraction;
@@ -71,12 +72,13 @@ public class CountingCommand extends CommandHandler {
         InteractionHook hook = event.getHook();
 
         Utils.async(() -> {
-            if (event.getChannel().getType() != ChannelType.TEXT) {
+            ChannelType type = event.getChannelType();
+            if (type != ChannelType.TEXT && type != ChannelType.GUILD_PUBLIC_THREAD) {
                 hook.sendMessage(Translation.GENERAL__UNSUPPORTED_CHANNEL_TYPE.toString()).queue();
                 return;
             }
 
-            plugin.getCommandHandler().putSlowdown(user, event.getName(), 5 * Utils.SECOND);
+            plugin.getCommandHandler().putCooldown(user, event.getName(), 5 * Utils.SECOND);
 
             switch (Objects.requireNonNullElse(event.getSubcommandName(), "null")) {
                 case "add" -> hook.sendMessage(Translation.COMMANDS__COUNTING__ADD.toString())
@@ -96,23 +98,22 @@ public class CountingCommand extends CommandHandler {
                             eb.setTitle(Translation.GENERAL__CLOSE_EMBED.toString());
                             eb.setColor(Color.RED);
                             eb.setTimestamp(Instant.now());
-                            eb.setFooter(Utils.getMemberAsTag(user, event.getMember()), Utils.getAvatar(user, event.getMember()));
+                            eb.setFooter(DiscordUtils.getMemberAsTag(user, event.getMember()), DiscordUtils.getAvatar(user, event.getMember()));
                             chn.sendMessageEmbeds(eb.build()).queue();
 
-                            Logs.info(Utils.getAsTag(user) + " removed counting channel " + chn.getAsMention() + "(`" + chn.getId() + "`)");
+                            Logs.info(DiscordUtils.getAsTag(user) + " removed counting channel " + chn.getAsMention() + "(`" + chn.getId() + "`)");
                         }
                         case NO_CHANGES -> hook.sendMessage(Translation.COMMANDS__COUNTING__REMOVE__NO_CHANGES.toString()).queue();
                         case FAILURE -> hook.sendMessage(Translation.COMMANDS__COUNTING__REMOVE__FAILURE.toString()).queue();
                     }
                 }
                 case "list" -> {
-                    JDA jda = event.getJDA();
                     long guildId = Objects.requireNonNull(event.getGuild()).getIdLong();
                     long mainGuildId = plugin.getConfig().getLong("main-guild-id");
 
                     List<String> channels = new ArrayList<>();
                     for (ChannelData data : plugin.getStorage().getChannels()) {
-                        GuildChannel chn = jda.getGuildChannelById(data.getChannelId());
+                        GuildChannel chn = event.getJDA().getGuildChannelById(data.getChannelId());
                         if (chn != null && chn.getGuild().getIdLong() == guildId) {
                             channels.add("**" + (channels.size() + 1) + ".** " + chn.getAsMention() + ": " + data.getType());
                         } else if (mainGuildId == guildId) {
@@ -145,7 +146,7 @@ public class CountingCommand extends CommandHandler {
             event.deferReply(true).queue();
             Utils.async(() -> {
                 ChannelData.Type type = Arrays.stream(ChannelData.Type.values())
-                        .filter(value -> value.toString().equals(event.getValues().get(0)))
+                        .filter(value -> value.toString().equals(event.getValues().getFirst()))
                         .findFirst()
                         .orElse(null);
                 if (type == null) {
@@ -153,27 +154,33 @@ public class CountingCommand extends CommandHandler {
                     return;
                 }
 
-                MessageChannelUnion channelUnion = event.getChannel();
-                if (channelUnion.getType() != ChannelType.TEXT) {
+                IWebhookContainer webhookChannel = switch (event.getChannelType()) {
+                    case TEXT -> event.getChannel().asTextChannel();
+                    case GUILD_PUBLIC_THREAD -> event.getChannel()
+                            .asThreadChannel()
+                            .getParentChannel()
+                            .asForumChannel();
+                    default -> null;
+                };
+                if (webhookChannel == null) {
                     reply(event, Translation.GENERAL__UNSUPPORTED_CHANNEL_TYPE.toString());
                     return;
                 }
-                TextChannel chn = channelUnion.asTextChannel();
 
-                plugin.getCommandHandler().putSlowdown(user, "counting", 5 * Utils.SECOND);
+                plugin.getCommandHandler().putCooldown(user, "counting", 5 * Utils.SECOND);
 
-                chn.retrieveWebhooks().queue(webhooks -> {
+                webhookChannel.retrieveWebhooks().queue(webhooks -> {
                     if (webhooks.isEmpty()) {
-                        chn.createWebhook("Counting bot").queue(webhook -> openChannel(chn, type, webhook, event, user));
+                        webhookChannel.createWebhook("Counting bot").queue(webhook -> openChannel(event.getChannel().asGuildMessageChannel(), type, webhook, event, user));
                     } else {
-                        openChannel(chn, type, webhooks.get(0), event, user);
+                        openChannel(event.getChannel().asGuildMessageChannel(), type, webhooks.getFirst(), event, user);
                     }
                 });
             });
         }
     }
 
-    private void openChannel(@NotNull TextChannel chn, ChannelData.Type type, Webhook webhook, @NotNull StringSelectInteraction event, User user) {
+    private void openChannel(@NotNull GuildMessageChannel chn, ChannelData.Type type, Webhook webhook, @NotNull StringSelectInteraction event, User user) {
         switch (plugin.getStorage().addChannel(new ChannelData(chn.getIdLong(), chn.getGuild().getIdLong(), type, webhook))) {
             case SUCCESS -> {
                 reply(event, Translation.COMMANDS__SELECT_MENU__SUCCESS.toString());
@@ -182,10 +189,10 @@ public class CountingCommand extends CommandHandler {
                 eb.setDescription(Translation.GENERAL__OPEN_EMBED__DESCRIPTION.getFormatted(type, type.getDescription()));
                 eb.setColor(Color.GREEN);
                 eb.setTimestamp(Instant.now());
-                eb.setFooter(Utils.getMemberAsTag(user, event.getMember()), Utils.getAvatar(user, event.getMember()));
+                eb.setFooter(DiscordUtils.getMemberAsTag(user, event.getMember()),DiscordUtils.getAvatar(user, event.getMember()));
                 chn.sendMessageEmbeds(eb.build()).queue(message -> message.pin().queue());
 
-                Logs.info(Utils.getAsTag(user) + " opened counting channel " + chn.getAsMention() + " (ID: `" + chn.getId() + "`)");
+                Logs.info(DiscordUtils.getAsTag(user) + " opened counting channel " + chn.getAsMention() + " (ID: `" + chn.getId() + "`)");
             }
             case NO_CHANGES -> reply(event, Translation.COMMANDS__SELECT_MENU__NO_CHANGES.toString());
             case FAILURE -> reply(event, Translation.COMMANDS__SELECT_MENU__FAILURE.toString());
